# blog_api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  categories.py  comments.py  health.py  posts.py  users.py
app/core/: bootstrap.py  config.py  database.py  rate_limiter.py  roles.py  security.py
app/migrations/: env.py
app/migrations/versions/: 429447a587de_create_users_table.py  655e9c376b8c_create_categories_table.py  a29ec89b3702_create_posts_table.py  bb4c1e41659c_create_comments_table.py
app/models/: base.py  category.py  comment.py  post.py  user.py
app/repositories/: category.py  comment.py  post.py  user.py
app/schemas/: auth.py  category.py  comment.py  pagination.py  post.py  user.py  user_admin.py
app/services/: auth.py
tests/: conftest.py  test_admin.py  test_auth.py  test_posts.py
